apps/gitops-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      k8s-app: gitops-app
  template:
    metadata:
      labels:
        k8s-app: gitops-app
    spec:
      containers:
        - name: gitops-app
          image: ghcr.io/kirqe/gitops-app:7d1e5c6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
