apps/gitops-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-app
  namespace: default
spec:
  selector:
    k8s-app: gitops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
